@startuml
title ShoppingCart and CartItem Functionality

class ShoppingCart {
+addItem(item: CartItem): void
+removeItem(item: CartItem): void
+updateItemQuantity(item: CartItem, quantity: int): void
+getTotal(): double
+getItems(): List<CartItem>
}

class CartItem {
-product: Products
-quantity: int
+getProduct(): Products
+setProduct(product: Product): void
+getQuantity(): int
+setQuantity(quantity: int): void
+getSubtotal(): double
}

class Products {
-product_id: int
-title: String
-description: String
-price: double
}

ShoppingCart "1" -- "*" CartItem : contains
CartItem "1" -- "1" Products : refers to

@enduml